--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,11 @@
-@import "/node_modules/primeflex/primeflex.css";
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
+/* @import "/node_modules/primeflex/primeflex.css"; */
 
 /* FONTS IMPORTS */
 @font-face {
@@ -18,6 +25,12 @@
 /* GLOBAL STYLES */
 html {
     scroll-behavior: smooth;
+}
+
+html,
+body {
+    -webkit-font-smoothing: antialiased; /* Chrome */
+    -moz-osx-font-smoothing: grayscale; /* Firefox */
 }
 
 :root {
@@ -69,6 +82,7 @@ html {
     --bg-comp: var(--bg-comp-dark);
     --bg-hover: var(--bg-hover-dark);
     --font-family: "JetBrains Mono";
+    --color-scheme: "dark";
 }
 
 main {
@@ -82,8 +96,24 @@ body {
     font-family: var(--font-family);
     background-color: var(--bg-dark);
     color: var(--text-dark-2);
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
     line-height: 1.6;
+}
+
+button,
+input,
+select,
+textarea {
+    -webkit-appearance: none; /* Chrome */
+    -moz-appearance: none; /* Firefox */
+    appearance: none;
+    outline: none;
+    border: none;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    font-family: inherit;
 }
 
 ::-webkit-scrollbar {
@@ -101,6 +131,10 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
     background-color: var(--gray-mute);
+}
+
+::-moz-selection {
+    background-color: var(--accent-tr);
 }
 
 ::selection {
@@ -136,18 +170,22 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
     box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
 }
 
 .hover-accent-shadow-box:hover {
+    -webkit-box-shadow: 0 0 10px var(--accent-mute);
     box-shadow: 0 0 10px var(--accent-mute);
 }
 
 .hover-accent-shadow-box:hover::before {
+    -webkit-box-shadow: inset 0 0 10px var(--accent-mute);
     box-shadow: inset 0 0 10px var(--accent-mute);
 }
 
 .inner-shadow {
+    -webkit-box-shadow: inset 1px 2px 5px #0000002c;
     box-shadow: inset 1px 2px 5px #0000002c;
 }
 
@@ -168,6 +206,8 @@ a {
 
 a {
     outline: none;
+    -webkit-transition: 0.2s ease-in-out;
+    -o-transition: 0.2s ease-in-out;
     transition: 0.2s ease-in-out;
     text-decoration: none;
 }
@@ -188,6 +228,7 @@ input::-webkit-file-upload-button {
     cursor: pointer;
     outline: none;
     background-color: transparent;
+    -webkit-transition: 0.2s ease-in-out;
     transition: 0.2s ease-in-out;
     border: 1px solid var(--accent);
     color: var(--accent);
@@ -199,10 +240,12 @@ button:hover,
 button:focus,
 input::-webkit-file-upload-button:hover,
 .hover-accent:hover {
+    -webkit-transition: 0.2s ease-in-out;
     transition: 0.2s ease-in-out;
     border: 1px solid var(--accent-hl);
     color: var(--accent-hl);
     text-shadow: 0 0 3px var(--accent);
+    -webkit-box-shadow: 0 0 5px var(--accent-soft);
     box-shadow: 0 0 5px var(--accent-soft);
 }
 
@@ -216,12 +259,15 @@ button:not(.inverted):hover::before,
 button:not(.inverted):focus::before {
     content: "";
     position: absolute;
+    -webkit-transition: 0.2s ease-in-out;
+    -o-transition: 0.2s ease-in-out;
     transition: 0.2s ease-in-out;
     width: 100%;
     height: 100%;
     left: 0;
     top: 0;
     border-radius: 8px;
+    -webkit-box-shadow: inset 0 0 5px var(--accent-soft);
     box-shadow: inset 0 0 5px var(--accent-soft);
 }
 
@@ -245,12 +291,15 @@ label {
 /* INPUT & SELECT */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
+    display: none;
     -webkit-appearance: none;
 }
 
-input:not([type="checkbox"]):not([type="radio"]),
+input:not([type="checkbox"]):not([type="radio"]):not([type="range"]),
 select {
-    min-height: 23.5px;
+    min-height: 40.5px;
+    -webkit-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
     background-color: var(--bg-comp);
     color: var(--text-color-1);
@@ -278,6 +327,8 @@ textarea:focus {
 /* INPUT RADIO & CHECKBOX */
 input[type="checkbox"],
 input[type="radio"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
     appearance: none;
     position: relative;
     padding-right: 20px;
@@ -293,6 +344,8 @@ input[type="radio"]::before {
     width: 15px;
     height: 15px;
     background-color: var(--bg-comp);
+    -webkit-transition: 0.1s ease;
+    -o-transition: 0.1s ease;
     transition: 0.1s ease;
 }
 
@@ -304,6 +357,7 @@ input[type="checkbox"]:checked::before {
     background-color: var(--accent);
     background-image: url("../img/check.svg");
     background-position: 40%;
+    -webkit-box-shadow: 0 0 5px var(--accent-soft);
     box-shadow: 0 0 5px var(--accent-soft);
 }
 
@@ -313,11 +367,13 @@ input[type="radio"]::before {
 
 input[type="radio"]:checked::before {
     background-color: var(--accent);
+    -webkit-box-shadow: 0 0 5px var(--accent-soft);
     box-shadow: 0 0 5px var(--accent-soft);
 }
 
 /* INPUT DATE & TIME */
 ::-webkit-calendar-picker-indicator {
+    -webkit-appearance: none;
     appearance: none;
     opacity: 0;
     cursor: pointer;
@@ -332,10 +388,11 @@ input[type="date"]::before,
 input[type="time"]::before {
     content: "";
     position: absolute;
-    top: 25%;
+    top: 30%;
     right: 10px;
     width: 16px;
     height: 16px;
+    -webkit-filter: invert(0.5);
     filter: invert(0.5);
 }
 
@@ -349,9 +406,18 @@ input[type="time"]::before {
 
 input[type="range"] {
     accent-color: var(--accent);
+    -webkit-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    background-color: var(--bg-comp);
+    color: var(--text-color-1);
+    outline: none;
+    border: none;
+    border-radius: 10px;
 }
 
 input:user-invalid {
+    -webkit-box-shadow: 0 0px 10px var(--error);
     box-shadow: 0 0px 10px var(--error);
 }
 
@@ -364,13 +430,28 @@ input:user-invalid {
 
 .input-box:has(input) label {
     position: absolute;
+    -webkit-transition: 0.2s ease-in-out;
+    -o-transition: 0.2s ease-in-out;
     transition: 0.2s ease-in-out;
     pointer-events: none;
+    -webkit-transform: translateX(0%) translateY(-100%);
+    -ms-transform: translateX(0%) translateY(-100%);
     transform: translateX(0%) translateY(-100%);
 }
 
+.input-box:has(input:not(:focus):-moz-placeholder-shown) label {
+    transform: translatex(10%) translateY(25%);
+}
+
+.input-box:has(input:not(:focus):-ms-input-placeholder) label {
+    -ms-transform: translatex(10%) translateY(25%);
+    transform: translatex(10%) translateY(25%);
+}
+
 .input-box:has(input:not(:focus):placeholder-shown) label {
-    transform: translatex(10%) translateY(12%);
+    -webkit-transform: translatex(10%) translateY(25%);
+    -ms-transform: translatex(10%) translateY(25%);
+    transform: translatex(10%) translateY(25%);
 }
 
 .input-box:has(input[required]) label::after {
@@ -381,6 +462,8 @@ input:user-invalid {
 textarea {
     color: var(--text-color-1);
     background-color: var(--bg-comp);
+    -webkit-transition: 0.2s ease-in-out;
+    -o-transition: 0.2s ease-in-out;
     transition: 0.2s ease-in-out;
     resize: none;
     border: none;
