--- a/publish/main.css
+++ b/publish/main.css
@@ -10,14 +10,14 @@
 /* FONTS IMPORTS */
 @font-face {
     font-family: "JetBrains Mono";
-    src: url(../fonts/JetBrains/JetBrainsMono.ttf) format("truetype-variations");
+    src: url(fonts/JetBrains/JetBrainsMono.ttf) format("truetype-variations");
     font-style: normal;
     font-weight: 1 999;
 }
 
 @font-face {
     font-family: "JetBrains Mono";
-    src: url(../fonts/JetBrains/JetBrainsMono-Italic.ttf) format("truetype-variations");
+    src: url(fonts/JetBrains/JetBrainsMono-Italic.ttf) format("truetype-variations");
     font-style: italic;
     font-weight: 1 999;
 }
@@ -371,7 +371,7 @@ input[type="checkbox"]::before {
 
 input[type="checkbox"]:checked::before {
     background-color: var(--accent);
-    background-image: url("../img/check.svg");
+    background-image: url("img/check.svg");
     background-position: 40%;
     -webkit-box-shadow: 0 0 5px var(--accent-soft);
     box-shadow: 0 0 5px var(--accent-soft);
@@ -413,11 +413,11 @@ input[type="time"]::before {
 }
 
 input[type="date"]::before {
-    background-image: url("../img/calendar.svg");
+    background-image: url("img/calendar.svg");
 }
 
 input[type="time"]::before {
-    background-image: url("../img/clock.svg");
+    background-image: url("img/clock.svg");
 }
 
 input[type="range"] {
