--- a/publish/main.css
+++ b/publish/main.css
@@ -5,6 +5,7 @@
 * Browsers: last 4 version
 */
 
+@import "/node_modules/normalize.css/normalize.css";
 @import "/node_modules/primeflex/primeflex.css";
 
 /* FONTS IMPORTS */
