--- a/publish/main.css
+++ b/publish/main.css
@@ -102,12 +102,12 @@ body {
     --color-scheme: "dark";
 }
 
-main {
+/* main {
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 0 30vw;
-}
+} */
 
 body {
     font-family: var(--font-family);
